# swiftui-egui-demo

./: .gitignore  README.md
SmoothChat/SmoothChat/: Chat.swift  ChatController.swift  SmoothChatApp.swift
SmoothChat/SmoothChat.xcodeproj/: project.pbxproj
SmoothChat/SmoothChat/Views/: ChatListEntryView.swift  ChatListView.swift
SmoothChat/SmoothChat/Views/SmoothView/: InputOutputHandlingView.swift  SmoothNSView.swift  SmoothRendererController.swift  SmoothView.swift
smooth-ui/: Cargo.toml  build.rs
smooth-ui/SmoothUI/: Package.swift
smooth-ui/SmoothUI/Sources/SmoothUI/: ChatController.swift  smooth-ui.swift
smooth-ui/scripts/: build_debug.sh  build_release.sh
smooth-ui/src/: chat_ui.rs  ffi.rs  font_loader.rs  input_output.rs  lib.rs  renderer.rs
